Fixed dropdown floating z-index

--- a/sass/inputs/_list.scss
+++ b/sass/inputs/_list.scss
@@ -15,7 +15,7 @@
 
     &.floating {
         // position: absolute;
-        z-index: 50;
+        z-index: $z-index-floating;
         // right   : 0;
         // left    : 0;
         // @include box-shadow(0 2px 4px 0 $base-shadow-color);
